@@ -1,4 +1,5 @@
 - MANTA-58 fix issue with breakends near contig boundaries
+- MANTA-61 add markdown-based user guide to build
 v0.12
 - MANTA-20 incorporate split-reads into quality score
 - MANTA-42 SV finder mismatches various read pair / sv-candidate combinations
